Adding no_rocm tag to unit-tests currently failing on the ROCm platform

--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -2864,6 +2864,7 @@ tf_py_test(
         ":framework_for_generated_wrappers",
         "//third_party/py/numpy",
     ],
+    tags = ["no_rocm"],
 )
 
 cuda_py_test(
@@ -5909,6 +5910,7 @@ tf_py_test(
         "client_testlib",
         "framework_test_lib",
     ],
+    tags = ["no_rocm"],
 )
 
 tf_py_test(
@@ -5931,7 +5933,10 @@ tf_py_test(
         ":errors",
         ":lib",
     ],
-    tags = ["no_windows"],
+    tags = [
+        "no_rocm",
+        "no_windows",
+    ],
 )
 
 tf_py_test(
@@ -6633,6 +6638,7 @@ tf_py_test(
         ":random_ops",
     ],
     main = "layers/pooling_test.py",
+    tags = ["no_rocm"],
 )
 
 cuda_py_test(
