Revert "Fixing XLA convolution without autotune"
This reverts commit 50ed599d44403902a6a72cd03df8cc3d7d2dbe20.

--- a/tensorflow/compiler/xla/tests/BUILD
+++ b/tensorflow/compiler/xla/tests/BUILD
@@ -1103,6 +1103,7 @@ xla_test(
     srcs = ["convolution_test.cc"],
     shard_count = 40,
     tags = [
+        "no_rocm",
         "nozapfhahn",
         "optonly",
     ],
@@ -1123,6 +1124,7 @@ xla_test(
     backends = ["gpu"],
     shard_count = 40,
     tags = [
+        "no_rocm",
         "optonly",
     ],
     deps = CONVOLUTION_TEST_DEPS + [
@@ -1138,6 +1140,9 @@ xla_test(
     backend_args = {"gpu": ["--xla_backend_extra_options=xla_gpu_experimental_conv_disable_layout_heuristic"]},
     backends = ["gpu"],
     shard_count = 25,
+    tags = [
+        "no_rocm",
+    ],
     deps = CONVOLUTION_TEST_DEPS + [
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
