Expose common framework headers to core/kernels to workaroung Google internal build issues

--- a/tensorflow/core/framework/BUILD
+++ b/tensorflow/core/framework/BUILD
@@ -81,6 +81,7 @@ exports_files(
     visibility = [
         "//tensorflow/core:__pkg__",
         "//tensorflow/core/common_runtime:__pkg__",
+        "//tensorflow/core/kernels:__pkg__",
     ],
 )
 
