--- a/tensorflow/python/keras/optimizer_v2/BUILD
+++ b/tensorflow/python/keras/optimizer_v2/BUILD
@@ -118,6 +118,9 @@ cuda_py_test(
         "//tensorflow/python/eager:context",
         "//tensorflow/python/keras:combinations",
     ],
+    tags = [
+        "no_rocm",
+    ],
 )
 
 cuda_py_test(
