[MLIR] Fix hlo to lhlo conversion amid std.constant ops
Add a conversion pattern to convert std.constant to xla_lhlo.const - to
run during HLO to LHLO conversion. Without such a pattern, xla_hlo to
xla_lhlo conversion would fail when std.constant ops provide constant tensor
operands to other xla_hlo ops. The tf-mlir-translate -hlo-to-mlir-hlo
for example generates such std.constant ops from HLO constant nodes.

std.constant tensor generating ops are to be replaced by constant memref
generating ops.

Fixes #39895.

Signed-off-by: Uday Bondhugula <uday@polymagelabs.com>

--- a/tensorflow/compiler/mlir/xla/BUILD
+++ b/tensorflow/compiler/mlir/xla/BUILD
@@ -360,6 +360,7 @@ cc_library(
         ":hlo",
         ":lhlo",
         ":map_hlo_to_lhlo_op",
+        "//tensorflow/core/platform:logging",
         "@com_google_absl//absl/memory",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Pass",
