Apply no_rocm tags on failing XLA tests.
//tensorflow/compiler/tests:adam_test_gpu
//tensorflow/compiler/tests:ternary_ops_test_gpu
//tensorflow/compiler/tests:unstack_test_gpu

The above 3 tests could actually pass if run locally.

//tensorflow/compiler/xla/service/gpu/tests:gpu_atomic_test

This one was changed last week so really has to be investigated.

--- a/tensorflow/compiler/tests/BUILD
+++ b/tensorflow/compiler/tests/BUILD
@@ -149,6 +149,7 @@ tf_xla_py_test(
     python_version = "PY3",
     tags = [
         "no_pip",  # TODO(b/149738646): fix pip install so these tests run on kokoro pip
+        "no_rocm"
     ],
     deps = [
         ":xla_test",
@@ -1035,6 +1036,7 @@ tf_xla_py_test(
     tags = [
         "no_pip",  # TODO(b/149738646): fix pip install so these tests run on kokoro pip
         "optonly",
+        "no_rocm"
     ],
     deps = [
         ":xla_test",
@@ -1347,6 +1349,7 @@ tf_xla_py_test(
         "no_pip",  # TODO(b/149738646): fix pip install so these tests run on kokoro pip
         "noasan",
         "notsan",
+        "no_rocm"
     ],
     deps = [
         ":xla_test",
