Re-enable GPU Fusion pass. It was accidentally disabled during the weekly sync a few weeks ago

--- a/tensorflow/core/common_runtime/BUILD
+++ b/tensorflow/core/common_runtime/BUILD
@@ -1014,6 +1014,21 @@ cc_library(
     ],
 )
 
+tf_cuda_library(
+    name = "gpu_fusion_pass",
+    srcs = ["gpu_fusion_pass.cc"],
+    hdrs = ["gpu_fusion_pass.h"],
+    copts = tf_copts(),
+    deps = [
+        ":function",
+        ":optimization_registry",
+        "//tensorflow/core:framework",
+        "//tensorflow/core:framework_internal",
+        "//tensorflow/core:graph",
+        "//tensorflow/core:lib",
+    ],
+)
+
 cc_library(
     name = "mkl_cpu_allocator",
     srcs = ["mkl_cpu_allocator.cc"],
@@ -1552,6 +1567,7 @@ tf_cuda_library(
         ":device_set",
         ":entry",
         ":function",
+        ":gpu_fusion_pass",
         ":graph_def_builder_util",
         ":graph_view",
         ":hierarchical_tree_broadcaster",
