Add no_rocm on //tensorflow/python/keras/mixed_precision/experimental:policy_test

--- a/tensorflow/python/keras/mixed_precision/experimental/BUILD
+++ b/tensorflow/python/keras/mixed_precision/experimental/BUILD
@@ -73,6 +73,7 @@ py_test(
         "//tensorflow/python/keras/mixed_precision/experimental:loss_scale_optimizer",
         "//tensorflow/python/keras/optimizer_v2",
     ],
+    tags = ["no_rocm"],
 )
 
 py_library(
