--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -2273,6 +2273,7 @@ cuda_py_test(
     python_version = "PY3",
     shard_count = 10,
     tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
         "noasan",
         "optonly",
     ],
@@ -4336,6 +4337,9 @@ cuda_py_test(
     python_version = "PY3",
     xla_enable_strict_auto_jit = False,
     xla_enabled = True,
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     deps = [
         ":client_testlib",
         ":config",
@@ -5118,7 +5122,10 @@ cuda_py_test(
     size = "medium",
     srcs = ["ops/math_ops_test.py"],
     python_version = "PY3",
-    tags = ["no_windows_gpu"],
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+	    "no_windows_gpu",
+    ],
     deps = [
         ":array_ops",
         ":errors",
@@ -6526,6 +6533,7 @@ tf_py_test(
     tags = [
         "no_pip",
         "no_pip_gpu",
+        "no_rocm",  # FAILS on ROCm 3.5
         "notap",
     ],
     deps = [
@@ -6992,6 +7000,7 @@ tf_py_test(
     python_version = "PY3",
     tags = [
         "no_pip",  # Relies on contrib
+        "no_rocm",  # FAILS on ROCm 3.5
         "no_windows",
         "notsan",  # intermittent races on a few percent of runs
     ],
@@ -7085,6 +7094,7 @@ tf_py_test(
     srcs = ["training/monitored_session_test.py"],
     tags = [
         "no_pip",
+        "no_rocm",  # FAILS on ROCm 3.5
         "notsan",  # b/67945581
     ],
     deps = [
@@ -7568,6 +7578,9 @@ cuda_py_test(
     size = "medium",
     srcs = ["ops/nn_grad_test.py"],
     python_version = "PY3",
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     deps = [
         ":client_testlib",
         ":framework_for_generated_wrappers",
@@ -7700,6 +7713,7 @@ cuda_py_test(
     tags = [
         "grappler",
         "no_pip",  # tf_optimizer is not available in pip.
+        "no_rocm",  # FAILS on ROCm 3.5
         "notap",  # TODO(b/135924227): Re-enable after fixing flakiness.
     ],
     # This test will not run on XLA because it primarily tests the TF Classic flow.
@@ -7914,6 +7928,7 @@ tf_py_test(
         "no_cuda_on_cpu_tap",
         "no_mac",
         "no_pip",
+        "no_rocm",  # FAILS on ROCm 3.5
         "no_windows",  # TODO(b/151942037)
     ],
     deps = [
