--- a/tensorflow/python/kernel_tests/BUILD
+++ b/tensorflow/python/kernel_tests/BUILD
@@ -144,7 +144,10 @@ cuda_py_test(
     name = "benchmark_test",
     size = "small",
     srcs = ["benchmark_test.py"],
-    tags = ["no_windows"],
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+        "no_windows",
+    ],
     deps = [
         "//tensorflow/python:client",
         "//tensorflow/python:client_testlib",
@@ -1571,6 +1574,7 @@ cuda_py_test(
     srcs = ["array_ops_test.py"],
     shard_count = 10,
     tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
         "noasan",  # times out
         "optonly",  # times out
     ],
@@ -3309,6 +3313,9 @@ cuda_py_test(
     size = "medium",
     srcs = ["cwise_ops_test.py"],
     shard_count = 50,
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     deps = [
         "//tensorflow/python:array_ops",
         "//tensorflow/python:client_testlib",
@@ -3772,6 +3779,9 @@ cuda_py_test(
     size = "medium",
     srcs = ["while_v2_test.py"],
     grpc_enabled = True,
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     deps = [
         "//tensorflow/core:protos_all_py",
         "//tensorflow/python:array_ops",
