--- a/tensorflow/python/profiler/BUILD
+++ b/tensorflow/python/profiler/BUILD
@@ -61,6 +61,7 @@ cuda_py_test(
     python_version = "PY3",
     tags = [
         "no_pip",
+        "no_rocm",  # FAILS on ROCm 3.5
     ],
     deps = [
         ":profiler_v2",
@@ -120,7 +121,10 @@ cuda_py_test(
     name = "profiler_test",
     srcs = ["profiler_test.py"],
     python_version = "PY3",
-    tags = ["no_pip"],
+    tags = [
+        "no_pip",
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     xla_enable_strict_auto_jit = False,  # Node names are different with autojit
     deps = [
         ":model_analyzer",
