--- a/tensorflow/python/ops/parallel_for/BUILD
+++ b/tensorflow/python/ops/parallel_for/BUILD
@@ -165,7 +165,10 @@ cuda_py_test(
     name = "math_test",
     srcs = ["math_test.py"],
     shard_count = 5,
-    tags = ["optonly"],  # Too slow in non-opt mode
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+        "optonly",  # Too slow in non-opt mode
+    ],
     deps = [
         ":control_flow_ops",
         ":test_util",
