--- a/tensorflow/tools/benchmark/BUILD
+++ b/tensorflow/tools/benchmark/BUILD
@@ -48,6 +48,9 @@ tf_cc_test(
     name = "benchmark_model_test",
     size = "medium",
     srcs = ["benchmark_model_test.cc"],
+    tags = [
+        "no_rocm",  # FAILS on ROCm 3.5
+    ],
     deps = [
         ":benchmark_model_lib",
         "//tensorflow/cc:cc_ops",
