[clang][windows] Fix tensorflow_cc debug link, fix ODR

--- a/tensorflow/BUILD
+++ b/tensorflow/BUILD
@@ -167,6 +167,24 @@ config_setting(
 )
 
 config_setting(
+    name = "msvc_cl_debug",
+    values = {
+        "compiler": "msvc-cl",
+        "compilation_mode": "dbg"
+    },
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
+    name = "clang_cl_debug",
+    values = {
+        "compiler": "clang-cl",
+        "compilation_mode": "dbg"
+    },
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
     name = "no_tensorflow_py_deps",
     define_values = {"no_tensorflow_py_deps": "true"},
     visibility = ["//visibility:public"],
@@ -762,6 +780,10 @@ tf_cc_shared_object(
             "-z defs",
             "-Wl,--version-script,$(location //tensorflow:tf_version_script.lds)",
         ],
+    }) + select({
+        "//tensorflow:msvc_cl_debug": [ "/DEBUG:FASTLINK" ],
+        "//tensorflow:clang_cl_debug": [ "/DEBUG:NONE" ],
+        "//conditions:default": []
     }),
     per_os_targets = True,
     soversion = VERSION,
