adding no_rocm tag to two tests which started failing after the 200622 sync. In both cases, the failures are in newly added subtests

--- a/tensorflow/python/ops/numpy_ops/BUILD
+++ b/tensorflow/python/ops/numpy_ops/BUILD
@@ -88,6 +88,9 @@ cuda_py_test(
 cuda_py_test(
     name = "np_random_test",
     srcs = ["np_random_test.py"],
+    tags = [
+        "no_rocm", # regression starting 200622 sync
+    ],
     deps = [
         ":numpy",
         "//tensorflow/python:platform",
