Resolving merge conflicts

--- a/tensorflow/python/keras/distribute/BUILD
+++ b/tensorflow/python/keras/distribute/BUILD
@@ -318,7 +318,7 @@ distribute_py_test(
 
 distribute_py_test(
     name = "keras_save_load_test",
-    size = "medium",
+    size = "large",
     srcs = ["keras_save_load_test.py"],
     full_precision = True,
     main = "keras_save_load_test.py",
@@ -550,14 +550,13 @@ py_test(
 
 distribute_py_test(
     name = "saved_model_mixed_api_test",
-    size = "medium",
+    size = "large",
     srcs = ["saved_model_mixed_api_test.py"],
     full_precision = True,
     main = "saved_model_mixed_api_test.py",
     shard_count = 7,
     tags = [
         "multi_and_single_gpu",
-        "no_rocm",
     ],
     deps = [
         "//tensorflow/python/distribute:combinations",
