Adding no_rocm tag to //tensorflow/compiler/xla/service/gpu/tests:scatter.hlo.test. We first need to add ROCm support to the hlo_to_llvm_ir utility (used by that test) and then make some ROCm specific updates to the FileCheck patterns to make this test pass

--- a/tensorflow/compiler/xla/service/gpu/tests/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/tests/BUILD
@@ -479,6 +479,9 @@ glob_lit_tests(
         "no_pip",
     ],
     driver = "@llvm-project//mlir:run_lit.sh",
+    tags_override = {
+        "scatter.hlo": ["no_rocm"],  # needs ROCm support for hlo_to_llvm_ir
+    },
     test_file_exts = ["hlo"],
 )
 
