Changing the size (from medium to large) for the test "//tensorflow/python/kernel_tests:cwise_ops_test", ince it is frequently timing out on the CI runs (since the switch to ROCm 3.5)

--- a/tensorflow/python/kernel_tests/BUILD
+++ b/tensorflow/python/kernel_tests/BUILD
@@ -3302,7 +3302,7 @@ cuda_py_test(
 
 cuda_py_test(
     name = "cwise_ops_test",
-    size = "medium",
+    size = "large",
     srcs = ["cwise_ops_test.py"],
     shard_count = 50,
     deps = [
