--- a/tensorflow/core/framework/BUILD
+++ b/tensorflow/core/framework/BUILD
@@ -175,6 +175,7 @@ filegroup(
         "allocator_registry.h",
         "attr_value_util.h",
         "bfloat16.h",
+        "cus.h",
         "bounds_check.h",
         "cancellation.h",
         "collective.h",
@@ -298,6 +299,8 @@ filegroup(
         "allocator_registry.h",
         "bfloat16.cc",
         "bfloat16.h",
+        "cus.h",
+        "cus.cc",
         "bounds_check.h",
         "cpu_allocator_impl.cc",
         "kernel_shape_util.cc",
@@ -636,6 +639,18 @@ cc_library(
 )
 
 cc_library(
+    name = "cus",
+    srcs = ["cus.cc"],
+    hdrs = ["cus.h"],
+    visibility = ["//tensorflow/core:__subpackages__"],
+    deps = [
+        ":numeric_types",
+        "//tensorflow/core/platform:types",
+    ],
+    alwayslink = 1,
+)
+
+cc_library(
     name = "numeric_types",
     hdrs = ["numeric_types.h"],
     visibility = [
@@ -762,6 +777,7 @@ tf_cuda_library(
         ":allocation_description_proto_cc",
         ":allocator",
         ":bfloat16",
+        ":cus",
         ":log_memory_proto_cc",
         ":numeric_types",
         ":resource_handle",
