--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -526,11 +526,35 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "cus_lib",
+    srcs = ["lib/core/cus.cc"],
+    hdrs = ["lib/core/cus.h"],
+    deps = [
+        ":numpy_lib",
+        ":safe_ptr",
+        "//tensorflow/core:framework",
+        "//tensorflow/core:lib",
+        "//third_party/python_runtime:headers",
+    ],
+)
+
 tf_python_pybind_extension(
     name = "_pywrap_bfloat16",
     srcs = ["lib/core/bfloat16_wrapper.cc"],
     hdrs = ["lib/core/bfloat16.h"],
     module_name = "_pywrap_bfloat16",
+    deps = [
+        "//third_party/python_runtime:headers",
+        "@pybind11",
+    ],
+)
+
+tf_python_pybind_extension(
+    name = "_pywrap_cus",
+    srcs = ["lib/core/cus_wrapper.cc"],
+    hdrs = ["lib/core/cus.h"],
+    module_name = "_pywrap_cus",
     deps = [
         "//third_party/python_runtime:headers",
         "@pybind11",
@@ -573,6 +597,7 @@ cc_library(
     ),
     deps = [
         ":bfloat16_lib",
+        ":cus_lib",
         ":numpy_lib",
         "//tensorflow/c:c_api_no_xla",
         "//tensorflow/core:lib",
@@ -1054,6 +1079,7 @@ cc_library(
     name = "ndarray_tensor_headers",
     hdrs = [
         "lib/core/bfloat16.h",
+        "lib/core/cus.h",
         "lib/core/ndarray_tensor.h",
         "lib/core/ndarray_tensor_bridge.h",
         "lib/core/numpy.h",
@@ -1088,6 +1114,7 @@ cc_library(
     ]),
     deps = [
         ":bfloat16_lib",
+        ":cus_lib",
         ":ndarray_tensor_bridge",
         ":numpy_lib",
         ":safe_ptr",
@@ -1486,6 +1513,7 @@ py_library(
     deps = [
         ":_dtypes",
         ":_pywrap_bfloat16",
+        ":_pywrap_cus",
         ":pywrap_tensorflow",
         "//tensorflow/core:protos_all_py",
     ],
@@ -6075,6 +6103,7 @@ pywrap_tensorflow_macro(
     }),
     deps = [
         ":bfloat16_lib",
+        ":cus_lib",
         ":cost_analyzer_lib",
         ":model_analyzer_lib",
         ":cpp_python_util",
@@ -6154,6 +6183,7 @@ filegroup(
     name = "win_lib_files_for_exported_symbols",
     srcs = [
         ":bfloat16_lib",  # bfloat16
+        ":cus_lib",  # cus
         ":cost_analyzer_lib",  # cost_analyzer
         ":cpp_python_util",  # util
         ":kernel_registry",  # kernel_registry
@@ -7604,6 +7634,7 @@ cc_library(
         "lib/core/py_exception_registry.h",
         "lib/core/pybind11_status.h",
         "lib/core/bfloat16.h",
+        "lib/core/cus.h",
         "lib/core/ndarray_tensor.h",
         "lib/core/ndarray_tensor_bridge.h",
         "lib/core/safe_ptr.h",
