--- a/tensorflow/core/platform/BUILD
+++ b/tensorflow/core/platform/BUILD
@@ -1351,6 +1351,7 @@ filegroup(
         "abi.h",
         "base64.h",
         "bfloat16.h",
+        "cus.h",
         "casts.h",
         "coding.h",
         "context.h",
@@ -1438,6 +1439,7 @@ filegroup(
     name = "framework_lite_hdrs",
     srcs = [
         "bfloat16.h",
+        "cus.h",
         "byte_order.h",
         "cpu_info.h",
         "ctstring.h",
@@ -1459,6 +1461,7 @@ filegroup(
     name = "lib_internal_private_hdrs",
     srcs = [
         "bfloat16.h",
+        "cus.h",
         "raw_coding.h",
         "scanner.h",
         "str_util.h",
@@ -1505,6 +1508,7 @@ filegroup(
     name = "tflite_portable_logging_hdrs",
     srcs = [
         "bfloat16.h",
+        "cus.h",
         "ctstring.h",
         "ctstring_internal.h",
         "logging.h",
@@ -1520,6 +1524,7 @@ filegroup(
     name = "jpeg_internal_hdrs",
     srcs = [
         "bfloat16.h",
+        "cus.h",
         "ctstring.h",
         "ctstring_internal.h",
         "dynamic_annotations.h",
@@ -1538,6 +1543,7 @@ filegroup(
     name = "gif_internal_hdrs",
     srcs = [
         "bfloat16.h",
+        "cus.h",
         "ctstring.h",
         "ctstring_internal.h",
         "dynamic_annotations.h",
@@ -1558,6 +1564,7 @@ filegroup(
         "abi.cc",
         "abi.h",
         "bfloat16.h",
+        "cus.h",
         "blocking_counter.h",
         "byte_order.h",
         "casts.h",
