Enable MLIR bridge by default for test rules with enable_mlir_bridge field
Explicitly disabling tests that are failing.

This will help make sure newly introduced tests are tested with MLIR.

PiperOrigin-RevId: 375904831
Change-Id: I97625c36a329e5a4279255fca5d3b95fe585281d

--- a/tensorflow/python/eager/BUILD
+++ b/tensorflow/python/eager/BUILD
@@ -960,6 +960,7 @@ tf_xla_py_test(
 tf_xla_py_test(
     name = "def_function_xla_test",
     srcs = ["def_function_xla_test.py"],
+    enable_mlir_bridge = False,
     python_version = "PY3",
     tags = [
         "no_pip",
