Increased visibility of is_mlir_bridge_test_{true, false}. This now includes the visibility used by the target `xla_test`, since uses of is_mlir_bridge_test_{true, false} use `xla_test`.
PiperOrigin-RevId: 376018381
Change-Id: I33f8ad6123db942a1b86c680751513de69744a2a

--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -4288,7 +4288,7 @@ alias(
 alias(
     name = "is_mlir_bridge_test_true",
     actual = "//tensorflow/python/framework:is_mlir_bridge_test_true",
-    visibility = visibility,
+    visibility = visibility + ["//tensorflow/compiler/tests:friends"],
 )
 
 alias(
@@ -4349,7 +4349,7 @@ alias(
 alias(
     name = "is_mlir_bridge_test_false",
     actual = "//tensorflow/python/framework:is_mlir_bridge_test_false",
-    visibility = visibility,
+    visibility = visibility + ["//tensorflow/compiler/tests:friends"],
 )
 
 alias(
