Support wrapping ops with variadic inputs/outputs in a call op.
PiperOrigin-RevId: 376070250
Change-Id: Iee94ce36c5ead79311d66d8237cf692482ff967a

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -1076,6 +1076,7 @@ cc_library(
     name = "mobile_additional_lib_deps",
     deps = tf_additional_lib_deps() + [
         ":platform_base",
+        "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/strings",
