--- a/tensorflow/core/kernels/mlir_generated/BUILD
+++ b/tensorflow/core/kernels/mlir_generated/BUILD
@@ -245,6 +245,7 @@ tf_kernel_library(
         "gpu_op_floor_div.cc",
         "gpu_op_squared_difference.cc",
         "gpu_op_xlogy.cc",
+        "gpu_op_xlog1py.cc",
     ]),
     tags = ["manual"],
     deps = if_mlir_generated_gpu_kernels_enabled([
@@ -279,6 +280,7 @@ tf_kernel_library(
         ":gpu_floor_div_kernels",
         ":gpu_squared_difference_kernels",
         ":gpu_xlogy_kernels",
+        ":gpu_xlog1py_kernels",
     ]),
 )
 
@@ -1337,6 +1339,18 @@ cpu_kernel_library(
 gpu_kernel_library(
     name = "gpu_xlogy_kernels",
     op = "xlogy",
+    tile_size = "1024",
+    types = [
+        "f16",
+        "f32",
+        "f64",
+    ],
+    unroll_factors = "4",
+)
+
+gpu_kernel_library(
+    name = "gpu_xlog1py_kernels",
+    op = "xlog1py",
     tile_size = "1024",
     types = [
         "f16",
