--- a/tensorflow/core/kernels/mlir_generated/BUILD
+++ b/tensorflow/core/kernels/mlir_generated/BUILD
@@ -243,6 +243,7 @@ tf_kernel_library(
         "gpu_op_zeta.cc",
     ]) + if_mlir_generated_experimental_kernels_enabled([
         "gpu_op_floor_div.cc",
+        "gpu_op_xdivy.cc",
         "gpu_op_squared_difference.cc",
         "gpu_op_xlogy.cc",
         "gpu_op_xlog1py.cc",
@@ -278,6 +279,7 @@ tf_kernel_library(
         "//third_party/eigen3",
     ]) + if_mlir_generated_experimental_kernels_enabled([
         ":gpu_floor_div_kernels",
+        ":gpu_xdivy_kernels",
         ":gpu_squared_difference_kernels",
         ":gpu_xlogy_kernels",
         ":gpu_xlog1py_kernels",
@@ -1344,6 +1346,20 @@ gpu_kernel_library(
         "f16",
         "f32",
         "f64",
+    ],
+    unroll_factors = "4",
+)
+
+gpu_kernel_library(
+    name = "gpu_xdivy_kernels",
+    op = "xdivy",
+    tile_size = "1024",
+    types = [
+        "f16",
+        "f32",
+        "f64",
+        "c64",
+        "c128",
     ],
     unroll_factors = "4",
 )
