Exclude extra dependancies for libtpu.
PiperOrigin-RevId: 377156635
Change-Id: I724063a800039d7c0c81328589b32112ca4d68be

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -739,7 +739,15 @@ tf_cuda_library(
         ":gpu_runtime",
         ":lib",
         ":ops",
-    ] + tensorflow_opensource_extra_deps(),
+    ] + if_libtpu(
+        [],
+        [":tensorflow_opensource_extra_deps"],
+    ),
+)
+
+cc_library(
+    name = "tensorflow_opensource_extra_deps",
+    deps = tensorflow_opensource_extra_deps(),
 )
 
 cc_library(
