Exclude extra dependancies for libtpu.
PiperOrigin-RevId: 377196252
Change-Id: I8ccea084514af0a05270545307111c2ff9ee927f

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -739,15 +739,7 @@ tf_cuda_library(
         ":gpu_runtime",
         ":lib",
         ":ops",
-    ] + if_libtpu(
-        [],
-        [":tensorflow_opensource_extra_deps"],
-    ),
-)
-
-cc_library(
-    name = "tensorflow_opensource_extra_deps",
-    deps = tensorflow_opensource_extra_deps(),
+    ] + tensorflow_opensource_extra_deps(),
 )
 
 cc_library(
