support matmul op for cus

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ tensorflow/contrib/cmake/_build/
 /api_init_files_list.txt
 /estimator_api_init_files_list.txt
 *.whl
+/env
+/debug
 
 # Android
 .gradle
